--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,3 +15,5 @@ askama_axum = "0.4.0"
 tower-http = { version = "0.5.2", features = ["fs"] }
 async-trait = "0.1"
 lazy_static = "1.4.0"
+markdown = "1.0.0-alpha.17"
+scraper = "0.12.0"
